# Crypto-Ops-Platform

./: .env.example  Dockerfile  Dockerfile.worker  Procfile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt  setup.bat  start.bat
app/: config.py  main.py
app/ai/: classifier.py  client.py  prompts.py  schemas.py
app/api/v1/: dashboard.py  fraud.py  tickets.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_initial_schema.py
app/fraud/: engine.py  rules.py  scorer.py
app/models/: __init__.py  classification.py  fraud.py  routing.py  ticket.py
app/routing/: engine.py  rules.py
app/schemas/: ticket.py
app/services/: ticket_service.py
app/utils/: logging.py  retry.py
app/workers/: celery_app.py  tasks.py
dashboard/: app.py
tests/: conftest.py
tests/test_ai/: test_classifier.py
tests/test_api/: test_tickets.py
tests/test_fraud/: test_rules.py
tests/test_services/: test_routing.py
