[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-ops-platform"
version = "1.0.0"
description = "AI-Driven Crypto Operations & Risk Automation System"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "celery[redis]==5.4.0",
    "redis==5.0.4",
    "openai==1.35.0",
    "structlog==24.2.0",
    "httpx==0.27.0",
    "tenacity==8.3.0",
    "python-dotenv==1.0.1",
    "streamlit==1.35.0",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "factory-boy==3.3.0",
]
